fixed issue with scroll overflow on homepage

--- a/frontend/src/components/Homepage/Homepage.css
+++ b/frontend/src/components/Homepage/Homepage.css
@@ -1,17 +1,17 @@
 .homepage-filter-wrapper{
     display: flex;
-    padding:10px 0;
+    padding:0 !important;
     width:calc(100vw);
-    overflow-y: scroll;
+    box-sizing: border-box;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
     box-shadow: 0px 8px 13px 1px rgba(0, 0, 0, 0.087);
 }
 
-.homepage-feed-wrapper .product-card-feed-container{
-    overflow-x: auto;
-    height:calc(100vh - 340px);
+.homepage-feed-wrapper {
+    overflow-y: scroll;
+    height:calc(100vh - 260px);
 }
 
 @media screen and (max-width: 1240px) {
