--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,9 +28,8 @@ h1, h2{
 }
 
 .app-body-wrapper {
-    height: calc(100vh - 100px);
+    height: calc(100vh - 120px);
     width:100%;
-    overflow-y: scroll;
 }
 
 .app-body-content-wrapper {
